assets/styles/projects.css
main {
    padding-bottom: 5rem;
    display: flex;
    flex-direction: column;
    gap: 3rem;
}

h2 {
    font-weight: 200;
}

h3 {
    font-size: 2.5rem;
}

li {
    overflow: hidden;
}

ul {
    margin: 0;
}

video.project__img-container {
    margin-right: 0;
}

.project-nav {
    position: fixed;
    bottom: 3rem;
}

.project-nav > ul {
    list-style: none;
    padding-left: 0;
    line-height: 2;
}

.project-nav > ul > li > a {
    color: var(--clr-black);
}

.project-nav > ul > li > .active {
    font-weight: 200;
    color: var(--clr-acc);
}

.project {
    grid-column: span 6;

    display: grid;
    grid-template-columns: repeat(6, 1fr);
    align-items: end;
    column-gap: 1rem;
    margin-bottom: 4rem;
}

.text-block {
    grid-column: 3 / 7;
}

.title {
    grid-column: span 6;
}

.info {
    grid-column: span 6;
    font-weight: 200;
    font-size: var(--size-xxl);
}

.title > h2 {
    font-size: var(--size-xxl);
    font-weight: 700;
    margin-bottom: 0;
}

.project__img-caption {
    font-weight: 200;
    text-align: left;
    margin-right: 1em;
    line-height: 1.5rem;
}

.project__img-caption a {
    color: var(--clr-acc);
}

.project__img-container {
    grid-column: 3 / 7;

    margin-right: -1rem;
    text-align: center;
}

.project__img {
    width: 100%;
}

@media screen and (max-width: 768px) {
    #full-height {
        height: auto !important;
    }

    .project-nav {
        display: none;
    }

    .project {
        grid-column: span 2;

        grid-template-columns: 1fr 1fr;

        margin-bottom: 0;
    }

    .project h2 {
        font-size: var(--size-m);
        margin-top: 0;
    }

    .project__img-container {
        margin-right: 0;
        grid-column: span 2;
    }

    .info {
        font-size: var(--size-m);
        line-height: 1.8;

        grid-column: span 2;
    }

    .title {
        grid-column: span 2;
    }

    .title > h2 {
        grid-column: span 2;
    }

    .text-block {
        grid-column: span 2;
    }
}

